--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "types": ["next", "next/types/global"],
+    "verbatimModuleSyntax": true,
     "incremental": true,
     "plugins": [
       {
